--- a/styles/sign-up.css
+++ b/styles/sign-up.css
@@ -5,18 +5,15 @@
     background-repeat: no-repeat;
     background-size: cover;
     margin-bottom: 7px;
-}
-
-body {
     
-
 }
 
 .hero-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 35px;
+    padding: 0 47px;
+    margin-top: -11px;
     /* background-color:rgba(0,0, 0, 0.6); */
 }
 
@@ -114,26 +111,20 @@ body {
 .enjoy {
     font-size: 50px;
 }
-/* 
-.story-img {
-    width: 400px;
-    height: 190px;
-} */
 
 .questions {
     background-color: black;
     color: white;
-    margin-bottom: 10px;
-    
+    margin-bottom: 10px; 
 }
 
 .questions ul {
     list-style-type: none;
 }
+
 .questions li {
     margin-bottom: 10px;
 }
-
 
 .questions-header {
     display: flex;
@@ -165,11 +156,6 @@ body {
     justify-content: space-evenly;
     padding: 13px 30px;
 }
-
-/* .questions-card button:hover  + .netflix-explained {
-  opacity: 1;
-  cursor: pointer;
-}  */
 
  .sign-up-form {
     display: flex;
